--- a/index.html
+++ b/index.html
@@ -3503,6 +3503,42 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
+              src="https://image.tmdb.org/t/p/original/tgyA4EhIp3XrWCgo2Q12UfJJNba.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Jack</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.8</span
+                >
+              </div>
+              <span class="movie-year-text">1996</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
               src="https://image.tmdb.org/t/p/original/zUybYvxWdAJy5hhYovsXtHSWI1l.jpg"
               class="movie-poster"
             />
@@ -3546,7 +3582,7 @@
             <div class="movie-rating">
               <div class="ratings-container">
                 <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
+                  ><img src="./images/IMDb_logo.png" /> 9.8</span
                 >
               </div>
               <span class="movie-year-text">2022</span>
@@ -8682,6 +8718,42 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
+              src="https://image.tmdb.org/t/p/original/tSz1qsmSJon0rqjHBxXZmrotuse.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">The Fall Guy</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 8.9</span
+                >
+              </div>
+              <span class="movie-year-text">2024</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
               src="https://image.tmdb.org/t/p/original/dcOvIqdsojUdAtWt1nPT9xS76Su.jpg"
               class="movie-poster"
             />
@@ -13670,6 +13742,42 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
+              src="https://image.tmdb.org/t/p/original/H6vke7zGiuLsz4v4RPeReb9rsv.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Challengers</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 2</span
+                >
+              </div>
+              <span class="movie-year-text">2024</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
               src="https://image.tmdb.org/t/p/original/dEDLY3KeghKFzks5nTDWdigVikr.jpg"
               class="movie-poster"
             />
@@ -14251,6 +14359,42 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
+              src="https://image.tmdb.org/t/p/original/vKVUsumbCzK5Kn3aDpKM4EizKCA.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Being John Malkovich</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> TBA</span
+                >
+              </div>
+              <span class="movie-year-text">1999</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
               src="https://image.tmdb.org/t/p/original/xVTSNeqEymd0iZKByf68A5nLIGM.jpg"
               class="movie-poster"
             />
@@ -14407,6 +14551,42 @@
                 >
               </div>
               <span class="movie-year-text">2023</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://image.tmdb.org/t/p/original/dAErkerWZlLyrA2giT4NcRns6Ug.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">The Hunt for Red October</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 7.8</span
+                >
+              </div>
+              <span class="movie-year-text">1990</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
