--- a/Anime.html
+++ b/Anime.html
@@ -1124,6 +1124,42 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
+                src="https://image.tmdb.org/t/p/original/PDe8WZHxH6XxM6Buxoo99aQrgw.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Kaiju No. 8</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 9.3</span
+                  >
+                </div>
+                <span class="movie-year-text">2024</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
                 src="https://image.tmdb.org/t/p/original/9m8bFIXPg26taNrFSXGwEORVACD.jpg"
                 class="movie-poster"
               />
@@ -1560,6 +1596,42 @@
                 class="movie-poster"
               />
               <h2 class="movie-title">Chainsaw Man</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.5</span
+                  >
+                </div>
+                <span class="movie-year-text">2022</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://image.tmdb.org/t/p/original/m9e7chRW8Q8Go1Dv00RCUHbMoNe.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Summer Time Rendering</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text"
